--- a/style.css
+++ b/style.css
@@ -1,1 +1,30 @@
-
+.top-section {
+  overflow: hidden;
+  padding: 30px 0 22px;
+  position: relative;
+}
+.top-section .logo img {
+  float: left;
+  margin-left: 10px;
+  width: 200px;
+  z-index: 0;
+  position: relative;
+}
+.top-section .title {
+  position: absolute;
+  width: 350px;
+  height: 350px;
+  right: 50px;
+  top: -125px;
+  border-radius: 50%;
+  text-align: center;
+  z-index: 2;
+  background-color: #42ab65;
+}
+.top-section .title h1 {
+  font-size: 30px;
+  line-height: 30px;
+  display: inline-block;
+  vertical-align: middle;
+  color: #fff;
+}
