--- a/style.css
+++ b/style.css
@@ -97,3 +97,9 @@ footer .wrap .copyright a {
   text-transform: uppercase;
   font-weight: bold;
 }
+footer .logo {
+  display: inline-block;
+  vertical-align: bottom;
+  letter-spacing: 0;
+  margin: 0 0 2px 10px;
+}
