--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-.top-section {
+header .top-section {
   overflow: hidden;
   padding: 30px 0 22px;
   position: relative;
 }
-.top-section .logo img {
+header .top-section .logo img {
   float: left;
   margin-left: 10px;
   width: 371px;
   z-index: 0;
   position: relative;
 }
-.top-section .title {
+header .top-section .title {
   position: absolute;
   width: 600px;
   height: 600px;
@@ -19,14 +19,16 @@
   border-radius: 50%;
   text-align: center;
   z-index: 2;
-  background-color: #42ab65;
+  background: #42ab65;
 }
-.top-section .title h1 {
-  font-size: 30px;
-  line-height: 30px;
+header .top-section .title h1 {
+  font-size: 45px;
+  line-height: 45px;
+  font-weight: normal;
   display: inline-block;
   vertical-align: middle;
   color: #fff;
+  padding-top: 260px;
 }
 .navbar {
   position: relative;
