Chaned logo class to nar-logo

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ header .top-section {
   padding: 30px 0 22px;
   position: relative;
 }
-header .top-section .logo img {
+header .top-section .logo-nar img {
   float: left;
   margin-left: 10px;
   width: 371px;
@@ -99,7 +99,7 @@ footer .wrap .copyright a {
   text-transform: uppercase;
   font-weight: bold;
 }
-footer .logo {
+footer .logo-nar {
   display: inline-block;
   vertical-align: bottom;
   letter-spacing: 0;
