--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ main {
 main .holder {
   background: #fff;
   box-shadow: 0 0 16px 4px rgba(0, 0, 0, .15);
-  height: 750px;
+  height: auto;
 }
 footer {
   border-top: 18px solid #0f0e9f;
