Updated media queries for logo-nar class

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ footer .logo-nar {
   margin: 0 0 2px 10px;
 }
 @media screen and (max-width: 1280px) {
-  header .top-section .logo img {
+  header .top-section .logo-nar img {
     width: 200px;
   }
   header .top-section .title {
@@ -124,7 +124,7 @@ footer .logo-nar {
   header .top-section {
     padding: 10px 0;
   }
-  header .top-section .logo img {
+  header .top-section .logo-nar img {
     width: 130px;
   }
   header .top-section .title {
